2001-09-30  Damien Sandras  <dsandras@seconix.com>

	* src/callbacks.cpp, src/cleaner.cpp, src/endpoint.cpp, src/main_interface.cpp, 
	src/main.cpp: Renamed GMH323Webcam to GMVideoGrabber, and added support for the class.
	Video Preview works again, but video connections only work if video preview is on.
	
2001-09-25  Damien Sandras  <dsandras@seconix.com>

	* FAQ, LICENSE: Added OpenSSL to the special exception part of
	the license.
	
2001-09-25  Damien Sandras  <dsandras@seconix.com>

	* configure.in: Optimisations.
	
2001-09-25  Damien Sandras  <dsandras@seconix.com>

	* src/cleaner.cpp, src/cleaner.h: Added those 2 files that implement a new
	multithreaded class that stops the connection before quitting and clear the
	threads.
	* src/endpoint.cpp: Changed destructor, internal GMH323Webcam and GMILSClient
	and no more deleted in the destructor as they should but by the cleaner which 
	is called by the quit callback. The ThreadsCleaner class is needed if we want to
	quit cleanly, without freezing the main interface while waiting that the GMH323Webcam
	class (for example) stops to grab.
	* src/ldap.cpp, src/ldap_h.h: The LDap window is not anymore destroyed and rebuilt
	each time, but only shown/hidden.
	* src/main_interface.cpp: Disabled video preview (will be reenabled in a few time).
	* src/webcam.cpp, src/webcam.h: Added mutexes to cleanly quit when the destructor
	is called (we wait some time => the destructor can take some time to execute).
	* src/ils.cpp, src/ils.h:  Added mutexes to cleanly quit when the destructor
	is called (we wait some time => the destructor can take some time to execute).

2001-09-24  Christian Rose  <menthos@menthos.com>

	* src/ils.cpp: Fixed message.

2001-09-23  Damien Sandras  <dsandras@seconix.com>

	* src/ils.cpp, src/ils.h: Created a new C++ class to cope with ILS
	directories.
	* src/ldap.cpp, src/ldap_h.h: Added support for those 2 files.
	* src/Makefile.am: Added ils.cpp and ils.h