@@ -1,3 +1,9 @@
+2001-09-01  Damien Sandras  <dsandras@seconix.com>
+
+	* src/endpoint.cpp, src/webcam.cpp: Completed the support of the new VideoGrabber
+	class : if the video preview is enabled, the camera device is not closed anymore
+	and reopened during the communication, but the video preview is reused.
+	
 2001-09-30  Damien Sandras  <dsandras@seconix.com>
 
 	* src/callbacks.cpp, src/cleaner.cpp, src/endpoint.cpp, src/main_interface.cpp, 
